0027242: Configuration - add missing Standard_EXPORT to OpenGl_TextBuilder class constructor